[tool.poetry]
name = "url-shortner"
version = "0.1.0"
description = ""
authors = ["Sukrut Dekhane <dekhanesd7@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.139.0"}
uvicorn = {extras = ["standard"], version = "^0.51.0"}
sqlalchemy = "^2.0.51"


[tool.poetry.group.dev.dependencies]
pytest = "^9.1.1"
ruff = "^0.15.21"
mypy = "^2.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
